--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,9 @@ on:
 permissions:
   actions: write
   checks: write
-  contents: read
+  contents: write
   id-token: write
-  pull-requests: write
+  pull-requests: read
   security-events: write
   statuses: write
 
