--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,11 +6,11 @@ on:
       - "*.*.*"
 
 permissions:
-  actions: write
+  actions: read
   checks: write
   contents: write
   id-token: write
-  pull-requests: read
+  pull-requests: write
   security-events: write
   statuses: write
 
