--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,13 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "de.aclrian.playpause"
+        applicationId 'de.aclrian.playpause'
         minSdk 33
         targetSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName '1.0.1'
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -36,7 +36,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
